--- a/k8s/deployments/nginx.deploy.yml
+++ b/k8s/deployments/nginx.deploy.yml
@@ -5,7 +5,8 @@ metadata:
 spec:
   replicas: 1
   selector:
-    app: nginx # Definindo diretamente a label aqui
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
@@ -14,3 +15,5 @@ spec:
       containers:
       - name: nginx
         image: nginx:latest
+        ports:
+        - containerPort: 80
