--- a/k8s/services/nginx.service.yml
+++ b/k8s/services/nginx.service.yml
@@ -1,14 +1,12 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
+  name: nginx-svc
   labels:
     app: nginx
-  name: nginx-deployment
-  namespace: default
 spec:
   ports:
   - port: 80
-    protocol: TCP
     targetPort: 80
   selector:
     app: nginx
